# DSR-foundry-agentic-workshop

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  README.md  azure.yaml  package-lock.json  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
docs/: architecture-diagram.md  facilitator-notes.md  guide-attendee.md  guide-facilitator.md  guide-instructor.md  guide-organizer.md  guide-proctor.md  index.md  instructor-guide.md  quickstart-attendee.md  quickstart-facilitator.md  quickstart-learner.md  quickstart-organizer-github-copilot.md  quickstart-organizer.md
infra/: .terraform.lock.hcl  README.md  deploy.ps1  deploy.sh  main.bicep  main.bicepparam  main.json  main.parameters.json  main.tf  main.tfvars.json  model-deployments.json  outputs.tf  teardown.ps1  teardown.sh  terraform.tfvars.example  variables.tf  versions.tf
scripts/: assign-attendee-roles.py  generate-attendee-onboarding.py  health-check.py  (+6 more)
tools/python/: README.md  pyproject.toml
tools/python/src/data_generator/: __init__.py  __main__.py  cli.py  engine.py  tool.py
tools/python/src/data_generator/tools/: __init__.py  customer_support_chat_log.py  ecommerce_order_history.py  financial_transaction.py  healthcare_clinical_policy.py  healthcare_record.py  hr_employee_record.py  insurance_claim.py  it_service_desk_ticket.py  legal_contract.py  manufacturing_maintenance_log.py  retail_policy.py  retail_product.py  tech_support.py  tech_support_sop.py  travel_booking.py
(+132 files in other folders)
