[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-agentic-workshop-tools"
version = "0.1.0"
description = "Synthetic data generator for the Microsoft Foundry agentic workshop, powered by the Microsoft Agent Framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Foundry Agentic Workshop Maintainers" }]
dependencies = [
    "agent-framework",
    "azure-identity>=1.19.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[project.scripts]
generate-data = "data_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["data_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
